[package]
name = "neoseeqie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viuer = { version = "0.6", features=["sixel"] }
term_size = "0.3.2"
termion = "*"
xterm-query = "0.4.0"
crossterm = "0.27.0"


